/*
 * Copyright 2025 the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


apply plugin: 'java'
apply plugin: "application"
apply plugin: 'infra.application'
apply plugin: 'building.conventions'
apply plugin: 'building.optional-dependencies'

group = "cn.taketoday"
description = "Web app template"


repositories {
  mavenLocal()
  maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
  maven { url "https://maven.aliyun.com/repository/public" }
  maven { url "https://repo.huaweicloud.com/repository/maven" }
}

dependencies {
  implementation 'cn.taketoday:today-starter-web'
  implementation 'cn.taketoday:today-starter-netty'
  implementation 'cn.taketoday:today-starter-jdbc'
  implementation 'cn.taketoday:today-starter-validation'
  implementation 'cn.taketoday:today-starter-json'

  implementation 'ch.qos.logback:logback-classic'
  implementation 'com.mysql:mysql-connector-j'
  implementation 'com.github.ben-manes.caffeine:caffeine'

  optional 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  annotationProcessor "cn.taketoday:infra-configuration-processor"
  annotationProcessor "cn.taketoday:infra-annotation-config-processor"


  testImplementation 'cn.taketoday:today-starter-test'

  testImplementation("org.junit.jupiter:junit-jupiter-api")
  testImplementation("org.junit.jupiter:junit-jupiter-params")
  testImplementation("org.junit.platform:junit-platform-suite-api")
  testImplementation("org.mockito:mockito-core")
  testImplementation("org.mockito:mockito-junit-jupiter")
  testImplementation("org.assertj:assertj-core")
  testAnnotationProcessor("org.projectlombok:lombok")

  // Pull in the latest JUnit 5 Launcher API to ensure proper support in IDEs.
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
  testRuntimeOnly("org.junit.platform:junit-platform-suite-engine")
}


compileJava {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17

}

application {
  applicationDefaultJvmArgs = [
      "-server",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
      "-Dinfra.profiles.active=prod",
      "-Dio.netty.leakDetection.level=disabled",
      "-Xms512M",
      "-Xmx512M"
  ]
}


infraJar {
  layered {
    includeLayerTools = false
  }
}


infraApplication {
  buildInfo {
    properties {
      additional = [
          "demo": "demo-value"
      ]
    }

  }
}


test {
  useJUnitPlatform()

}


distributions {
  main {
    contents {

    }
  }
}


